--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Figures"
+title: "Figures main manuscript"
 author: "Heterogeneity in direct replications in psychology and its association with effect size"
 output: 
   pdf_document: 
@@ -33,6 +33,7 @@ source("helper_functions_tables_figures.r") #Load functions to prep data for fig
 ```
 
 ##Figure 1
+
 ```{r Plot_tau_against_I2, fig.asp = 0.618, cache = TRUE}
 dat3 <- readRDS("../data/tau_simulation_results.RDS")
 names(dat3) <- sort(unique(dat$effect)) #names were alphabetized upon splitting in simulation so must sort
@@ -79,8 +80,8 @@ ggplot(dat3, aes(x = tau, y = I2, group = effect, color = effect_type)) +
 Figure 1. Result of simulation relating $I^2$-values to between studies standard deviation. Each line represent one of 37 effects. Tau is not directly comparable across effect size measures. 
 
 ##Figure 2
-```{r Density_plot, cache = TRUE}
 
+```{r Density-plot-prep, cache = TRUE}
 #1) I2 plot----
 dens <- readRDS("../data/power_simulation_results.RDS")
 names(dens) <-  sort(unique(dat$effect))
@@ -103,7 +104,10 @@ observed <- dat %>%
   map_dfr(est_heterogen_smd_raw, .id = "effect") %>% 
   select(effect, I2 = s_I2) %>%
   mutate(Heterogeneity = "Observed")
+```
 
+
+```{r Density-plot, fig.height=4, fig.width=6.47}
 I2_plot <- ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogeneity, linetype = Heterogeneity)) +
   geom_histogram(data = observed, aes(y = ..density.., x = I2), bins = 100, alpha = 1) +
   geom_density(alpha = 0.3) +
@@ -124,70 +128,18 @@ I2_plot <- ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogenei
   scale_x_continuous(name = expression(paste(I^2," index", sep = ""))) +
   guides(fill = guide_legend(override.aes = list(alpha = c(rep(0.3, 4), 1))))
 
+I2_plot
 # ggsave("../figures/density-I2.png", dpi = 600, height =  4, width = 6.47, device = cairo_pdf())
 
-#2) tau2 plot----
 
-dens_tau2 <- readRDS("../data/biserial_simulation_results.RDS")
-names(dens_tau2) <-  sort(unique(dat$effect))
-
-# Simulated data at various heterogeneity levels, prep for plotting
-tau2_dist <- dens_tau2 %>%
- bind_rows(.id = "effect") %>%
- rename(Heterogeneity = tau_index) %>%
- mutate(Heterogeneity = recode(Heterogeneity,
-                             '1' = "Zero",
-                             '2' = "Small",
-                             '3' = "Medium",
-                             '4' = "Large"),
-          Heterogeneity = as.factor(Heterogeneity),
-        tau = sqrt(tau2_hat))
-
-# Observed tau2 estimates, i.e, results from main table, see table.rmd
-# Effects transformed and estimated with sourced functions 'transform_MA' and 'summarizer'
-observed_tau <- dat %>%
-   split(.$effect) %>%
-   map(transform_MA) %>% 
-   map_dfr(summarizer, .id = "effect") %>%
-   select(effect, tau2) %>%
-   mutate(Heterogeneity = "Observed",
-          tau = sqrt(tau2))
-
-tau_plot <- ggplot(tau2_dist, aes(x = tau, group = Heterogeneity, fill = Heterogeneity, linetype = Heterogeneity)) +
-  geom_histogram(data = observed_tau, aes(y = ..density.., x = tau), bins = 130, alpha = 1) +
-  geom_density(alpha = 0.3) +
-  theme_classic() +
-  coord_cartesian(xlim = c(0, 0.25)) + #truncate plot for better visualization
-  scale_fill_brewer(palette = "Dark2",
-                     breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
-                     labels = c("Zero (0)", "Small (1/321)", "Medium (1/107)", "Large (3/107)", "Observed")) +
-  scale_linetype_manual(values = c( "dotdash", "dotted", "solid", "solid", "dashed"),
-                         breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
-                         labels = c("Zero (0)", "Small (1/321)", "Medium (1/107)", "Large (3/107)", "Observed")) +
-  scale_color_brewer(palette = "Dark2",
-                      breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
-                      labels = c("Zero (0)", "Small (1/321)", "Medium (1/107)", "Large (3/107)", "Observed")) +
-  theme(legend.position = c(0.85, 0.71),
-       legend.background = element_rect(linetype = "solid", color = "black")) +
-  scale_y_continuous(name = "Density") +
-  scale_x_continuous(name = expression(paste(italic(tau)," estimate", sep = ""))) +
-  guides(fill = guide_legend(override.aes = list(alpha = c(rep(0.3, 4), 1))))
-
-#ggsave("../figures/density-tau2.pdf", dpi = 600, height =  4, width = 6.47, device = cairo_pdf())
-
-#3) combine I2-tau2-density-plots----
-densities <- plot_grid(I2_plot, tau_plot, nrow = 2, labels = c("a", "b"), align = "v") #combine plots
-densities
-
-# save_plot("../figures/densities_het.png", densities,
-#            nrow = 2,  base_width = 7, base_aspect_ratio = 0.618, dpi = 600)
 ```
 
-Figure 2. Simulated $I^2$ (a) and $/tau^2$ (b) densities across 37 effects for zero, small, medium, and large heterogeneity according to the definitions of Higgins (2003), and a histogram of the observed I2 estimates for the 37 effects. For panel b) effects consist of correlations and biserial correlation and heterogeneity levels were approximated by Fisher’s z values corresponding to Higgins’ definitions for the median sample size of 108. Each simulated density consists of approximately 370,000 estimates. 
+Figure 2. Simulated $I^2$  densities across 37 effects for zero, small, medium, and large heterogeneity according to the definitions of Higgins (2003), and a histogram of the observed $I^2$ estimates for the 37 effects. Each simulated density consists of approximately 370,000 estimates. 
 
 
 ##Figure 3, correlations per effect type
-```{r corr_per_effect_type, cache = FALSE}
+
+```{r corr_per_effect_type-prep, cache = TRUE}
 #Each set of input datapoints is meta-analyzed as per the original replication project
 #Then correlated with tau2 per effect type
 #Function 'est_heterogen_smd_raw' is sourced, see also tables.rmd
@@ -259,7 +211,10 @@ labels <- tau2_per_type %>% #row 1:2 = tau2, row 3:4 = I2, row 5:6 = H2
   split(.$effect_type) %>% 
   map_dfr(fitter, .id = "effect_type") %>%
   mutate(lab = paste0("b = ", b, ", r = ", r)) #put output into one variable for improved plotting
-  
+```
+
+
+```{r corr_per_effect_type-plot, cache = FALSE}
 #tau2plot----
 tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) + 
   geom_point(alpha = 0.5) +
@@ -312,6 +267,8 @@ combo
 Figure 3. The correlation between effect size and A) tau2, b) I2 and c) H2 respectively  22 effects that were measured as mean or standardized mean differences and 6 effects measured as correlations from ten pre-registered multi-lab replication projects. Effects reported as mean differences were standardized and correlations were transformed into Fisher’s z. Shaded bands represent 95% confidence intervals
 
 ```{r cor_het_effect_size, results = "hide", cache=TRUE}
+
+#This section gives the correlations reported in the section 'Heterogeneity and effect sizes' in the main manuscript 
 
 #1. Standardized mean differences----
 SMDs <- tau2_per_type %>% filter(effect_type == "Standardized Mean Difference")
