--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -157,29 +157,34 @@ MD_fit <- function(x){
              H2trunc = fit$H2, H2 = fit$QE / (fit$k - 1))
 }
 
-fisher_fit <- function(x){
-    fit <- rma(measure = "ZCOR", ri = effect_size, ni = Ntotal, data = x)
+
+OR_fit <- function(x){
+    fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
     hetero <- confint(fit)$random[c(1, 3), ] 
     data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
              s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
              tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3],
              H2trunc = fit$H2, H2 = fit$QE / (fit$k - 1))
-    }
+}
+
+
 
 #Raw mean differences to SMD
 MD_standardized <- dat %>% 
-  filter(effect_type == "Raw mean difference" & !outcomes1_2 == "mean _ SE") %>% #No method in metafor to compute SMD when standard deviations not given, so skip this study 
+  filter(outcomes1_2 == "mean _ SD") %>% #Note, drops Mean _ SE study since no method in metafor to convert into standardized mean differences
   split(.$effect) %>% 
   map_dfr(MD_fit, .id = "effect")
 
-fisher <- dat %>% 
-  filter(effect_type == "r") %>% 
-  split(.$effect) %>% 
-  map_dfr(fisher_fit, .id = "effect")
+#effects that were originally transformed from OR to SMD by ML1 which we refit as OR
+OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', 
+           'Norm of reciprocity', 'Low vs. high category scales') 
 
-#effects that were transformed from OR to SMD by ML1 which we will drop
-OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', #originally transformed to SMD
-           'Norm of reciprocity', 'Low vs. high category scales') #refit as OR
+ml2_or <- c("Affect & Risk", "Trolley Dilemma 1", "Framing", "Trolley Dilemma 2") #odds ratio effects in ML2 we will fit as OR
+
+odds_ratios <- dat %>% 
+  filter(effect %in% c(OR2d, ml2_or)) %>% 
+  split(.$effect) %>% 
+  map_dfr(OR_fit, .id = "effect")
 
 
 tau2_per_type <- dat %>% #This is to add the effect_type names
@@ -188,13 +193,13 @@ tau2_per_type <- dat %>% #This is to add the effect_type names
   mutate(effect_type = recode(effect_type, 
                               d = "Standardized Mean Difference")) %>% 
   left_join(tau2_per_type) %>% #Add the meta-analytic results
-  filter(!effect %in% c(OR2d, MD_standardized$effect, fisher$effect)) %>% #drop old SMD converted OR, unstandardized MD and raw correlations
+  filter(!effect %in% c(odds_ratios$effect, MD_standardized$effect)) %>% #drop old odds ratio effects and unstandardized MD
   bind_rows(MD_standardized) %>% #add MD after standardization
-  bind_rows(fisher) %>% #add correlations as fisher's z
+  bind_rows(odds_ratios) %>% #add odds ratios
   mutate(effect_type = ifelse(effect %in% MD_standardized$effect, "Standardized Mean Difference", effect_type),
-         effect_type = ifelse(effect %in% fisher$effect, "Fisher's z", effect_type),
+         effect_type = ifelse(effect %in% odds_ratios$effect, "Odds Ratio", effect_type),
          eff_size = abs(eff_size)) %>% #need the absolute values for plotting
-  filter(effect_type %in% c("Standardized Mean Difference", "Fisher's z"))
+  filter(effect_type %in% c("Standardized Mean Difference", "Odds Ratio"))
 
 
 #labels for figure 3----
@@ -309,7 +314,7 @@ combo <- cowplot::plot_grid(tau2_facet, I2_facet, H2_facet, labels = "AUTO")
 combo
 ```
 
-Figure 3. The correlation between effect size and A) tau2, b) I2 and c) H2 respectively  22 effects that were measured as mean or standardized mean differences and 6 effects measured as correlations from ten pre-registered multi-lab replication projects. Effects reported as mean differences were standardized and correlations were transformed into Fisher’s z. Square brackets contain 95% bootstrapped percentile confidence intervals.
+Figure 3. The correlation between effect size and A) tau2, B) I2 and C) H2 respectively  40 effects that were measured as mean or standardized mean differences and 8 effects measured as odds ratios from 13 pre-registered multi-lab replication projects. Effects reported as mean differences were standardized. Square brackets contain 95% bootstrapped percentile confidence intervals.
 
 
 ```{r cor_het_effect_size, results = "hide", cache=TRUE}
