Updated Table 2 (descriptives) with ML2/RRR9/RRR10 info

--- a/bibliography/bibliography-heterogeneity.bib
+++ b/bibliography/bibliography-heterogeneity.bib
@@ -677,3 +677,30 @@
 }
 
 
+@article{mccarthyRegisteredReplicationReport2018,
+  title = {Registered {{Replication Report}} on {{Srull}} and {{Wyer}} (1979)},
+  volume = {1},
+  issn = {2515-2459, 2515-2467},
+  language = {en},
+  number = {3},
+  journal = {Advances in Methods and Practices in Psychological Science},
+  doi = {10.1177/2515245918777487},
+  author = {McCarthy, Randy J. and Skowronski, John J. and Verschuere, Bruno and Meijer, Ewout H. and Jim, Ariane and Hoogesteyn, Katherine and Orthey, Robin and Acar, Oguz A. and Aczel, Balazs and Bakos, Bence E. and Barbosa, Fernando and Baskin, Ernest and B{\`e}gue, Laurent and {Ben-Shakhar}, Gershon and Birt, Angie R. and Blatz, Lisa and Charman, Steve D. and Claesen, Aline and Clay, Samuel L. and Coary, Sean P. and Crusius, Jan and Evans, Jacqueline R. and Feldman, Noa and {Ferreira-Santos}, Fernando and Gamer, Matthias and Gerlsma, Coby and Gomes, Sara and {Gonz{\'a}lez-Iraizoz}, Marta and Holzmeister, Felix and Huber, Juergen and Huntjens, Rafaele J. C. and Isoni, Andrea and Jessup, Ryan K. and Kirchler, Michael and {klein Selle}, Nathalie and Koppel, Lina and Kovacs, Marton and Laine, Tei and Lentz, Frank and Loschelder, David D. and Ludvig, Elliot A. and Lynn, Monty L. and Martin, Scott D. and McLatchie, Neil M. and Mechtel, Mario and Nahari, Galit and {\"O}zdo{\u g}ru, Asil Ali and Pasion, Rita and Pennington, Charlotte R. and Roets, Arne and Rozmann, Nir and Scopelliti, Irene and Spiegelman, Eli and Suchotzki, Kristina and Sutan, Angela and Szecsi, Peter and Tingh{\"o}g, Gustav and Tisserand, Jean-Christian and Tran, Ulrich S. and Van Hiel, Alain and Vanpaemel, Wolf and V{\"a}stfj{\"a}ll, Daniel and Verliefde, Thomas and Vezirian, K{\'e}vin and Voracek, Martin and Warmelink, Lara and Wick, Katherine and Wiggins, Bradford J. and Wylie, Keith and Y\i{}ld\i{}z, Ezgi},
+  month = sep,
+  year = {2018},
+  pages = {321-336}
+}
+
+@article{verschuereRegisteredReplicationReport2018,
+  title = {Registered {{Replication Report}} on {{Mazar}}, {{Amir}}, and {{Ariely}} (2008)},
+  volume = {1},
+  issn = {2515-2459, 2515-2467},
+  language = {en},
+  number = {3},
+  journal = {Advances in Methods and Practices in Psychological Science},
+  doi = {10.1177/2515245918781032},
+  author = {Verschuere, Bruno and Meijer, Ewout H. and Jim, Ariane and Hoogesteyn, Katherine and Orthey, Robin and McCarthy, Randy J. and Skowronski, John J. and Acar, Oguz A. and Aczel, Balazs and Bakos, Bence E. and Barbosa, Fernando and Baskin, Ernest and B{\`e}gue, Laurent and {Ben-Shakhar}, Gershon and Birt, Angie R. and Blatz, Lisa and Charman, Steve D. and Claesen, Aline and Clay, Samuel L. and Coary, Sean P. and Crusius, Jan and Evans, Jacqueline R. and Feldman, Noa and {Ferreira-Santos}, Fernando and Gamer, Matthias and Gomes, Sara and {Gonz{\'a}lez-Iraizoz}, Marta and Holzmeister, Felix and Huber, Juergen and Isoni, Andrea and Jessup, Ryan K. and Kirchler, Michael and {klein Selle}, Nathalie and Koppel, Lina and Kovacs, Marton and Laine, Tei and Lentz, Frank and Loschelder, David D. and Ludvig, Elliot A. and Lynn, Monty L. and Martin, Scott D. and McLatchie, Neil M. and Mechtel, Mario and Nahari, Galit and {\"O}zdo{\u g}ru, Asil Ali and Pasion, Rita and Pennington, Charlotte R. and Roets, Arne and Rozmann, Nir and Scopelliti, Irene and Spiegelman, Eli and Suchotzki, Kristina and Sutan, Angela and Szecsi, Peter and Tingh{\"o}g, Gustav and Tisserand, Jean-Christian and Tran, Ulrich S. and Van Hiel, Alain and Vanpaemel, Wolf and V{\"a}stfj{\"a}ll, Daniel and Verliefde, Thomas and Vezirian, K{\'e}vin and Voracek, Martin and Warmelink, Lara and Wick, Katherine and Wiggins, Bradford J. and Wylie, Keith and Y\i{}ld\i{}z, Ezgi},
+  month = sep,
+  year = {2018},
+  pages = {299-317}
+}
