--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -62,11 +62,13 @@ papers <- c('Klein et al. (2014)',
 'Cheung et al. (2016)',
 'Wagenmakers et al. (2016)',
 'Bouwmeester et al. (2017)',
-"O'Donnell et al. (2017)")
+"O'Donnell et al. (2017)",
+"McCarthy et al. (2018)",
+"Verschuere et al. (2018)")
 
 ##Full APA reference below
 # c('Klein, R. A., Ratliff, K. A., Vianello, M., Adams, R. B., Jr., Bahn?k, S., Bernstein, M. J., . . . Nosek, B. A. (2014). Investigating variation in replicability: A "many labs" replication project. Social Psychology, 45(3), 142-152.', 
-# Add full APA ref for ML2
+# Klein, R. A., Vianello, M., Hasselman, F., Adams, B. G., Adams, R. B., Alper, S., … Nosek, B. A. (2018). Many Labs 2: Investigating Variation in Replicability Across Samples and Settings. Advances in Methods and Practices in Psychological Science, 1(4), 443–490. https://doi.org/10.1177/2515245918810225
 # 'Ebersole, C. R., Atherton, O. E., Belanger, A. L., Skulborstad, H. M., Allen, J. M., Banks, J. B., ... & Brown, E. R. (2016). Many Labs 3: Evaluating participant pool quality across the academic semester via replication. Journal of Experimental Social Psychology, 67, 68-82.',
 # 'Alogna, V. K., Attaya, M. K., Aucoin, P., Bahn?k, S., Birch, S., Birt, A. R., ... & Buswell, K. (2014). Registered replication report: Schooler and engstler-schooler (1990). Perspectives on Psychological Science, 9(5), 556-578.',
 # 'Alogna, V. K., Attaya, M. K., Aucoin, P., Bahn?k, S., Birch, S., Birt, A. R., ... & Buswell, K. (2014). Registered replication report: Schooler and engstler-schooler (1990). Perspectives on Psychological Science, 9(5), 556-578.',
@@ -76,9 +78,11 @@ papers <- c('Klein et al. (2014)',
 # 'Wagenmakers, E. J., Beek, T., Dijkhoff, L., Gronau, Q. F., Acosta, A., Adams Jr, R. B., ... & Bulnes, L. C. (2016). Registered Replication Report: Strack, Martin, & Stepper (1988). Perspectives on Psychological Science, 11(6), 917-928.',
 # 'Bouwmeester, S., Verkoeijen, P. P., Aczel, B., Barbosa, F., B?gue, L., Bra?as-Garza, P., ... & Evans, A. M. (2017). Registered Replication Report: Rand, Greene, and Nowak (2012). Perspectives on Psychological Science, 12(3), 527-542.',
 # "O'Donnell, M., Nelson, L., McLatchie, N. M., & Lynott, D. J. (2017). Registered Replication Report: Dijksterhuis & van Knippenberg (1998): Multilab direct replication of: A variant of study 4 from Dijksterhuis, A., & van Knippenberg, A.(1998). The relation between perception and behavior, or how to win a game of trivial pursuit. Journal of personality and social psychology. Perspectives on Psychological Science."
+#McCarthy, R. J., Skowronski, J. J., Verschuere, B., Meijer, E. H., Jim, A., Hoogesteyn, K., ... & Barbosa, F. (2018). Registered replication report on Srull and Wyer (1979). Advances in Methods and Practices in Psychological Science, 1(3), 321-336.
+#Verschuere, B., Meijer, E. H., Jim, A., Hoogesteyn, K., Orthey, R., McCarthy, R. J., ... & Barbosa, F. (2018). Registered replication report on Mazar, Amir, and Ariely (2008). Advances in Methods and Practices in Psychological Science, 1(3), 299-317.
 
 description <- c("Two correlational effects: 'Gender math attitude' compared implicit attitudes (IAT) towards math between genders and 'IAT correlation math' correlated implicit attitudes with self-reported measures. The remainder were experiments with two independent groups. The groups were primed in some way (Anchoring 1-4; low vs. high category scales; norm of reciprocity; flag priming; currency priming), asked to imagine slightly different situations (Sunk costs; gain vs. loss framing; gambler's fallacy; imagined contact) or asked their agreement with statements presented differently (Allowed vs. forbidden; quote attribution). ", #ML1
-                 "'Summary about ML2 effects': 17/28 effects were experiments with two independent groups. Two correlational effects. Two difference between correlations. 4 odds ratio effects. One hierarchical regression effect. One strange effect.", #ML2
+                 "Most effects were experiments with two independent groups. Often participants were primed in some way (Structure & Goal Pursuit, Priming Consumerism, Incidental Anchors, Position & Power, Moral Cleansing, Priming Warmth) or asked to imagine slightly different situations (SMS & Well-Being, Less is Better, Moral Typecasting, Intentional Side-Effects, Tempting Fate, Affect & Risk, Trolley Dilemma 1, Framing, Trolley Dilemma 2, Disgust & Homophobia, Choosing or Rejecting). Some groups saw slightly different statements (Correspondence Bias, Intuitive Reasoning), were asked to perform slightly different tasks (Direction & SES, Actions are Choices), or had to read a text with a clear vs. unclear font (Incidental Disfluency). Two correlational effects measured the correlations of Moral Foundations with political leaning, and Social Value Orientation with family size. Two effects examined order effects (Assimilation & Contrasts, Direction & Similarity). Finally, in False Consensus 1 and 2, participants made a binary choice and estimated how many people had made the same choice.", #ML2
             "Several effects were experiments with two independent groups. The groups were either primed in some way (Power and perspective; warmth perceptions; subjective distance interaction), saw slightly different statements (Elaboration likelihood interaction; credentials interaction) or experienced different situations (weight embodiment). Examined interactions were between treatment conditions and participant characteristics. One priming effect (metaphor) compared two treatment groups with a control. One effect was correlational: 'Conscientiousness and persistence' was measured by an unsolvable anagram task and self-report respectively. The Stroop task is a within-person experiment with two conditions and the 'Availability' effect asks participants to judge whether some letters are more common in the first or third position.", #ML3
                  "Verbal overshadowing 1; Independent two-group experiment. Participants either described a robber after watching a video or listed countries/capitals and after a filler task attempted to identify the robber in a lineup.", #RRR1
             "Verbal overshadowing 2; Different from 1 only in that the filler task took place before the descriptive task instead of after.", #RRR2
@@ -87,20 +91,22 @@ description <- c("Two correlational effects: 'Gender math attitude' compared imp
             "Commitment on neglect/exit; Independent two-group experiment with two outcome variables. Participants either primed to think about commitment to or independence from partner.", #RRR5
             "Facial feedback hypothesis; Independent two-group experiment. Participants either induced to 'smile' or 'pouth' by holding a pen in their mouth differently and simultaneously rated funniness of cartoons. ", #RRR6
             "Intuitive cooperation; Independent two-group experiment. Economic game with money contribution to a common pool either under time pressure or time delay.",
-                 "Professor priming; Independent two-group experiment. Participants primed with either a 'professor' or 'hooligan' stimuli. Outcome was percentage correct trivia answers.") #RRR8
+                 "Professor priming; Independent two-group experiment. Participants primed with either a 'professor' or 'hooligan' stimuli. Outcome was percentage correct trivia answers.", #RRR8
+            "Hostility priming; Independent two-group experiment. Participants descrambled sentences, either 20% or 80% were hostile, then rated ambiguos behavior.", #RRR9
+            "Moral reminder; Independent two-group experiment. Participants either recalled the Ten Commandments or books they'd read. Outcome was degree of cheating when reporting results. ") #RRR10 
 
 
 US_online <- dat %>% #Extract the (max when multiple effects) number of US/online labs per RP
   group_by(rp, effect) %>% 
   summarize(US = sum(country == "USA"),
-            online = sum(in_lab == 0)) %>% 
+            online = sum(in_lab == 0, na.rm = TRUE)) %>% 
   group_by(rp) %>% 
   summarize(US = max(US),
             online = max(online)) %>% 
   ungroup() %>% select(US, online)
 
 sample_settings <- c("26/36 samples were primarily university students, 3 general population and 7 undescribed. 9/36 samples were online, including all the general population ones.", #https://osf.io/g3udn/, ML1
-                     "'ML2 sample information'", #ML2
+                     "79/125 samples were collected in person (typically in labs), remainder online. Mean age in two rounds of data collection were 22.37 and 23.34 years.", #ML2
                      "20/21 samples were university students, 1 general population which was also the only online sample.", #Ml3
                      "31/32 samples were undergraduate students aged 18-25, 1 general population which was also the only online sample.", #RRR1
                      "22/23 samples were undergraduate students aged 18-25, 1 general population which was also the only online sample.", #RRR2
@@ -109,7 +115,9 @@ sample_settings <- c("26/36 samples were primarily university students, 3 genera
                      "All samples consisted of in-lab undergraduate students aged 18-25", #RRR5
                "All but one sample explicitly consisted of students and all took place in-lab. The last sample was recruited at university grounds.", #RRR6
                'All samples consisted of in-lab undergraduate students aged 18-34.', #RRR7
-                     "All samples consisted of in-lab undergraduate students aged 18-25") #RRR8
+                     "All samples consisted of in-lab undergraduate students aged 18-25", #RRR8
+               "All samples consisted of in-lab students aged 18-25",
+               "All samples consisted of in-lab students aged 18-25")
 
 #1) what kind of samples
 
@@ -125,6 +133,8 @@ summary.table <- dat %>%
          'Description of Effects' = description,
          'K (US)' = paste0(k, " (", US_online$US, ")")) %>% 
   select(RP = rp, Paper, Countries,'K (US)', everything(), -k) #change order of columns
+
+summary.table <- summary.table[c(1:4, 6:13, 5),] #reorder so RRR10 is last instead of after RRR1
 
 summary.table %>% knitr::kable(booktabs = TRUE,
                                digits = 0,
